<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".agedogapp.AgeDogActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/images"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_old_are_you"
            android:padding="16dp"
            android:textSize="24sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/age_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="number"
            android:hint="@string/your_ege"
            android:minHeight="48dp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:text="Tu edad canina es de 120 años "
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/calculator" />
    </LinearLayout>
</layout>