<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/todo_bacground_todo_app"
    tools:context=".todoapp.TodoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_title"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginVertical="45dp"
        android:layout_marginHorizontal="32dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_categories"
        style="@style/TodoSubtitle"/>

    <!--creacion de un recyclerview para categorias-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_task"
        style="@style/TodoSubtitle"
        android:layout_marginTop="32dp"/>

    <!--para tareas-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"/>

</LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:src="@android:drawable/ic_input_add"
        app:fabSize="normal"
        app:tint="@color/white"
        android:layout_gravity="end|bottom"
        app:backgroundTint="@color/todo_accent"/>
</FrameLayout>